# lead-machine

./: .env.example  .gitignore  PLAN.md  README.md  RESEARCH-lead-qualification-2026.md  package.json  pnpm-lock.yaml
services/worker/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
services/worker/src/leadmachine/: _http.py  cli.py  config.py  db.py  jobs.py  pipeline.py
services/worker/src/leadmachine/angles/: __init__.py  client.py  generate.py  models.py  prompt.py
services/worker/src/leadmachine/compliance/: __init__.py  robinson.py  screen.py
services/worker/src/leadmachine/cvr/: __init__.py  branchekoder.py  client.py  discovery.py  mapper.py  penhed.py  query.py
services/worker/src/leadmachine/financial/: __init__.py  client.py  enrich.py  estimate.py  models.py  xbrl.py
services/worker/src/leadmachine/scoring/: __init__.py  models.py  rubric.py  score.py
services/worker/src/leadmachine/website/: __init__.py  (+12 more)
services/worker/tests/: conftest.py  test_analyze.py  test_angles.py  test_branchekoder.py  test_classify.py  test_client.py  test_discover.py  test_discovery.py  test_domain.py  test_estimate.py  test_fetch.py  test_financial_client.py  test_financial_enrich.py  test_grade.py  test_independence.py  test_jobs.py  test_management.py  test_mapper.py  test_pagespeed.py  test_penhed.py  test_phones.py  test_qualify.py  test_query.py  test_resolve.py  test_robinson.py  test_scoring.py  test_smoke.py  test_xbrl.py
services/worker/tests/fixtures/: cvr_companies.json  cvr_deltager.json  offentliggoerelser_sample.json  xbrl_sample.xml
(+68 files in other folders)
